[package]
name = "beatperf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
plotters = "0.3.7"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
spinners = "4.1.1"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
